# EyegentIC

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  KEYBINDINGS.md  README.md  build.rs  build.sh  context-mode-features.md  zellij.kdl
.github/workflows/: release.yml
scripts/: eyegentic-hook.ts  seed-permissions.sh
src/: config.rs  detect.rs  indicators.rs  installer.rs  lib.rs  log.rs  main.rs  probe.rs  render.rs  settings.rs  state.rs  status.rs
src/agent/: mod.rs  pi.rs
