[package]
name = "eyegentic"
version = "0.1.1"
edition = "2021"
authors = ["AppliedEllipsis"]
description = "A zellij plugin that keeps an eye on your coding-agent panes — agent status at a glance."
license = "GLWTS"
readme = "README.md"
repository = "https://github.com/AppliedEllipsis/EyegentIC"
keywords = ["zellij", "plugin", "agent", "status", "monitor"]
categories = ["development-tools"]

# zellij plugins are WASI *command* modules: the `register_plugin!` macro
# emits `fn main()` so the toolchain produces a `_start` entry point, which
# zellij calls to initialize the plugin before `load`. A `cdylib` has no entry
# point, so `_start` is never emitted and zellij fails with "could not find
# exported function". Keep this as a bin crate (src/main.rs, no [lib]).

# zellij 0.44.x ships zellij-tile 0.44.3. Keep these in sync with the
# zellij binary that will load the resulting .wasm.
[dependencies]
zellij-tile = "0.44.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
